# redesigned-octo-disco

./: .gitignore  AGENTS.md  README.md  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: backend-tests.yml  pages.yml
backend/: handler.py  pyproject.toml  requirements-dev.txt  samconfig.toml  samconfig.toml.example  template.yaml
backend/app/: __init__.py  auth.py  booklib.py  config.py  db.py  http.py  keys.py  models.py  parsing.py  router.py  timeutil.py
backend/app/routes/: __init__.py  actions.py  books.py  goals.py  stats.py
backend/tests/: __init__.py  conftest.py  test_handler_smoke.py  test_http.py  test_models.py  test_routes_actions.py  test_routes_actions_get_decimal.py  test_routes_books.py  test_routes_goals.py
frontend/: app.js  index.html  styles.css
